[Common] Update linker script, startup file
Description:
  - Update linker script for GNU arm compiler
  - Update startup code with syntax of GNU arm compiler
  - Change common files name
Affected file:
  - interrupt src file
  - startup, linker file

--- a/script/Makefile
+++ b/script/Makefile
@@ -1,5 +1,9 @@
 
+#Device
+DEVICE=stm32f407VG
+
 TOOLCHAIN_PATH = 
+BASE=../
 
 CC = $(TOOLCHAIN_PATH)/arm-none-eabi-gcc
 OBJCPY = $(TOOLCHAIN_PATH)/arm-none-eabi-objcopy
@@ -7,29 +11,45 @@ GDB = $(TOOLCHAIN_PATH)/arm-none-eabi-gdb
 
 C_CPU_FLAGS = -mcpu=cortex-m4 -mthumb -mabi=aapcs -mfloat-abi=hard -mfpu=fpv4-sp-d16 -mabi=aapcs
 C_DEBUG_FLAGS = -g
-C_OTHER_FLAGS = -ffunction-sections -fdata-sections
+C_OTHER_FLAGS = -ffunction-sections -fdata-sections -flto
 C_OPTIMIZATION_FLAGS = -O0
-C_LANGUAGE_FLAGS = -std=c11
+C_LANGUAGE_FLAGS = -std=c99
+
+# Startup code
+STARTUP=$(BASE)/common/arm/startup_$(DEVICE).s
+
+# Link for code size
+GC=-Wl,--gc-sections
 
 CFLAGS = $(C_CPU_FLAGS) $(C_DEBUG_FLAGS) $(C_OTHER_FLAGS) $(C_OPTIMIZATION_FLAGS)
-LD_FLAGS = -T cortex_m4.ld -Wl,-Map=project.map -Wl,--gc-sections -nostartfiles
+#--script=file warning, output mapfile , enable garbage collection of unused section
+LD_FLAGS = -T SampleApp.ld -Wl,-Map=SampleApp.map -Wl,--gc-sections -nostartfiles
 
-SOURCES = vector_table.c interrupt.c application.c
+SOURCES = $(BASE)/sample/SampleApp.c\
+          $(BASE)/common/interrupt/Interrupt.c\
+          $(BASE)/common/interrupt/Interrupt_VectorTable.c\
+          $(BASE)/common/arm/src/system_stm32f407VG.c
+
+INCLUDEFILES= $(BASE)/common/arm/include\
+          $(BASE)/common/arm/include\
+          $(BASE)/common/interrupt\
+          $(BASE)/common/interrupt
+
 OBJECTS = $(SOURCES:.c=.o)
 
 all: project.hex project.bin
 
 %.o : %.c
-	$(CC) $(CFLAGS) -c -o $@ $< $(CFLAGS)
- 
+	$(CC) $(CFLAGS) -I $(INCLUDEFILES) -c -o $@ $< $(CFLAGS)
+
 project.elf: $(OBJECTS)
 	$(CC) -o $@ $(C_CPU_FLAGS) $(LD_FLAGS) $^
- 
+
 project.bin: project.elf
 	$(OBJCPY) -O binary $^ $@
- 
+
 project.hex: project.elf
 	$(OBJCPY) -O ihex $^ $@
- 
+
 clean:
 rm -rf *.o *.elf *.bin *.hex *.map
