[Common] Update makefile
Description:
  - Makefile able to compile module CAN
  - Need add bat file for input parameter(specific module compilation)
Affected file:
  -

--- a/sample/Makefile
+++ b/sample/Makefile
@@ -6,8 +6,12 @@
 # Description:  Makefile of SampleApp
 #*******************************************************************************
 
+# specify base path of project << shall input by tool or change manually
+BASE := C:\Users\NDY3HC\Desktop\Tool\wp\stm32
+MODULE := CAN
+
 include ../common/make/common.mak
-include ../modules/CAN/make/module.mak
+include ../modules/$(MODULE)/make/module.mak
 #include module shall be change to use input para in build script
 
 #specify device
@@ -22,13 +26,12 @@ include ../modules/CAN/make/module.mak
 DEVICE=stm32f407VG
 
 TOOLCHAIN_PATH = C:\Users\NDY3HC\Desktop\Tool\gcc\gcc-arm-none-eabi-7-2018-q2-update-win32\bin
-BASE=../
 
 CC = $(TOOLCHAIN_PATH)/arm-none-eabi-gcc
+AS = $(TOOLCHAIN_PATH)/arm-none-eabi-as
 LD = $(TOOLCHAIN_PATH)/arm-none-eabi-ld
 OBJCPY = $(TOOLCHAIN_PATH)/arm-none-eabi-objcopy
 GDB = $(TOOLCHAIN_PATH)/arm-none-eabi-gdb
-
 
 C_CPU_FLAGS = -mcpu=cortex-m4 -mthumb -mabi=aapcs -mfloat-abi=hard -mfpu=fpv4-sp-d16 -mabi=aapcs
 C_DEBUG_FLAGS = -g
@@ -42,16 +45,24 @@ STARTUP=$(BASE)/common/arm/startup_$(DEVICE).s
 # Link for code size
 GC=-Wl,--gc-sections
 
-CFLAGS = $(C_CPU_FLAGS) $(C_DEBUG_FLAGS) $(C_OTHER_FLAGS) $(C_OPTIMIZATION_FLAGS)
+CFLAGS = $(C_CPU_FLAGS) $(C_DEBUG_FLAGS) $(C_OTHER_FLAGS) $(C_OPTIMIZATION_FLAGS) $(C_LANGUAGE_FLAGS)
 #--script=file warning, output mapfile , enable garbage collection of unused section
 LD_FLAGS = -T SampleApp.ld -Wl,-Map=SampleApp.map -Wl,--gc-sections -nostartfiles
 
-OBJECTS = $(SRCFILES:.c=.o)
+SRCFILES += $(wildcard *.c) $(COMMON_SRC) $(MODULE_SRC)
+INCFILES += $(CURDIR) $(COMMON_INC) $(MODULE_INC)
+INCFILES := $(addprefix -I,$(INCFILES))
+OBJECTS := $(SRCFILES:.c=.o) startup_$(DEVICE).o
 
 all: project.hex project.bin
 
 %.o : %.c
-	$(CC) $(CFLAGS) -I $(INCLUDEFILES) -c -o $@ $< $(CFLAGS)
+	$(CC) $(CFLAGS) $(INCFILES) -c $< -o $@
+
+startup_$(DEVICE).o : startup_$(DEVICE).s
+	$(AS) -c $(CFLAGS) $(INCFILES) $@ -o $<
+
+OBJECTS += startup_$(DEVICE).o
 
 project.elf: $(OBJECTS)
 	$(CC) -o $@ $(C_CPU_FLAGS) $(LD_FLAGS) $^
@@ -64,3 +75,8 @@ project.hex: project.elf
 
 clean:
 	rm -rf *.o *.elf *.bin *.hex *.map
+
+.PHONY : debug_vars
+debug_vars:
+	@echo SRCFILES: $(SRCFILES)
+	@echo INCFILES: $(INCFILES)
