--- a/script/Makefile
+++ b/script/Makefile
@@ -1,4 +1,20 @@
-#include somefile.mak
+#*******************************************************************************
+# File:         Makefile
+# Revision:
+# Author:
+# Date:         03.09.2019
+# Description:  Makefile of SampleApp
+#*******************************************************************************
+#option input for makefile to parallel execution of rules
+MAKEFLAGS += -j
+
+# specify base path of project << shall input by tool or change manually
+BASE := C:\Users\NDY3HC\Desktop\Tool\wp\stm32
+MODULE := CAN
+
+include ../common/make/common.mak
+include ../modules/$(MODULE)/make/module.mak
+#include module shall be change to use input para in build script
 
 #specify device
 #specify module build
@@ -9,12 +25,13 @@
 
 #rule to build sample app
 #Device
-DEVICE=stm32f407VG
+DEVICE=stm32f407vg
 
-TOOLCHAIN_PATH = C:\Users\NDY3HC\Desktop\Tool\gcc\gcc-arm-none-eabi-7-2018-q2-update-win32\bin
-BASE=../
+# TOOLCHAIN_PATH = D:\Tool\GNUToolsARMEmbedded\ARMCompiler\bin
 
 CC = $(TOOLCHAIN_PATH)/arm-none-eabi-gcc
+AS = $(TOOLCHAIN_PATH)/arm-none-eabi-as
+LD = $(TOOLCHAIN_PATH)/arm-none-eabi-ld
 OBJCPY = $(TOOLCHAIN_PATH)/arm-none-eabi-objcopy
 GDB = $(TOOLCHAIN_PATH)/arm-none-eabi-gdb
 
@@ -30,35 +47,43 @@ STARTUP=$(BASE)/common/arm/startup_$(DEVICE).s
 # Link for code size
 GC=-Wl,--gc-sections
 
-CFLAGS = $(C_CPU_FLAGS) $(C_DEBUG_FLAGS) $(C_OTHER_FLAGS) $(C_OPTIMIZATION_FLAGS)
+CFLAGS = $(C_CPU_FLAGS) $(C_DEBUG_FLAGS) $(C_OTHER_FLAGS) $(C_OPTIMIZATION_FLAGS) $(C_LANGUAGE_FLAGS)
 #--script=file warning, output mapfile , enable garbage collection of unused section
 LD_FLAGS = -T SampleApp.ld -Wl,-Map=SampleApp.map -Wl,--gc-sections -nostartfiles
 
-SRCFILES= $(BASE)/sample/SampleApp.c\
-          $(BASE)/common/interrupt/Interrupt.c\
-          $(BASE)/common/interrupt/Interrupt_VectorTable.c\
-          $(BASE)/common/arm/src/system_stm32f407VG.c
+SRCFILES += $(wildcard *.c) $(COMMON_SRC) $(MODULE_SRC)
+INCFILES += $(CURDIR) $(COMMON_INC) $(MODULE_INC)
+INCFILES := $(addprefix -I,$(INCFILES))
+# OBJECTS := $(SRCFILES:.c=.o)
+# to get the file name only and change to target .o file
+OBJECTS := $(notdir $(SRCFILES:.c=.o))
+# set the dir for searching source file required by static pattern
+vpath %.c $(sort $(dir $(SRCFILES)))
 
-INCFILES= $(BASE)/common/arm/include\
-          $(BASE)/common/arm/include\
-          $(BASE)/common/interrupt\
-          $(BASE)/common/interrupt
+all: SampleApp.hex SampleApp.bin
 
-OBJECTS = $(SRCFILES:.c=.o)
+$(OBJECTS): %.o : %.c
+	$(CC) $(CFLAGS) $(INCFILES) -c $^ -o $@
 
-all: project.hex project.bin
+startup_$(DEVICE).o : $(STARTUP)
+	$(CC) $(CFLAGS) $(INCFILES) -c $< -o $@
 
-%.o : %.c
-	$(CC) $(CFLAGS) -I $(INCLUDEFILES) -c -o $@ $< $(CFLAGS)
+OBJECTS += startup_$(DEVICE).o
 
-project.elf: $(OBJECTS)
+SampleApp.elf: $(OBJECTS)
 	$(CC) -o $@ $(C_CPU_FLAGS) $(LD_FLAGS) $^
 
-project.bin: project.elf
+SampleApp.bin: SampleApp.elf
 	$(OBJCPY) -O binary $^ $@
 
-project.hex: project.elf
+SampleApp.hex: SampleApp.elf
 	$(OBJCPY) -O ihex $^ $@
 
 clean:
 	rm -rf *.o *.elf *.bin *.hex *.map
+
+.PHONY : debug_vars
+debug_vars:
+	@echo SRCFILES: $(SRCFILES)
+	@echo INCFILES: $(INCFILES)
+	@echo OBJECTS: $(OBJECTS)
